force-app/main/default/objects/Account/fields/Balance2__c.field-meta.xml
<CustomField>
    <fullName>Balance2__c</fullName>
    <label>Balance2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>