force-app/main/default/objects/Account/fields/Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance__c</fullName>
    <formula>Balance1__c - Balance2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>